[package]
name = "dynamic-pricing-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.149"}
tokio = { version = "1.44.0", features = ["full"] }
rumqttc = "0.25.1"
chrono-tz = "0.10.4"
